LogIn 페이지 & 기능 추가
MongoDB와 연동하여 로그인 기능 추가

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,6 +19,8 @@ block body
                         a(href='solution') Solution
                     li
                         a(href='contact') Contact
+                    li
+                        a(href='login') Log In
         // Site footer
         // footer.footer
            // p © Company 2014
